--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -38,6 +38,18 @@
 
 }
 
+.v {
+    background-color: rgba(34, 17, 217, 0.75);
+    width: 100%;
+    height: 100%;
+}
+
+.p {
+    background-color: rgba(230, 200, 0, 0.75);
+    width: 100%;
+    height: 100%;
+   }
+
 .wall:hover {
     background-color: #444444;
     opacity: [0.9, 0.8, 0.7];
@@ -101,7 +113,7 @@
 
 
   0% {
-    transform: scale(1.5);
+    transform: scale(0.5);
     background-color: rgba(34, 17, 217, 0.75);
   }
 
