--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -1,7 +1,7 @@
 .finish {
     width: 100%;
     height: 100%;
-    background-color: #FF4141;
+    background-color: #fd3595;
 }
 
 .finish:hover {
@@ -23,7 +23,7 @@
 .start {
     width: 100%;
     height: 100%;
-    background-color: #15C241;
+    background-color: #47c6ab;
 }
 
 .start:hover {
@@ -45,7 +45,7 @@
 }
 
 .p {
-    background-color: rgba(230, 200, 0, 0.75);
+    background-color: rgba(188, 201, 62, 0.75);
     width: 100%;
     height: 100%;
    }
@@ -74,23 +74,23 @@
 @keyframes visitedAnimation {
   0% {
     transform: scale(0.3);
-    background-color: rgba(0, 0, 66, 0.75);
+    background-color: #FCF6F5FF;
     border-radius: 100%;
   }
 
   50% {
       transform: scale(.7);
-    background-color: rgba(217, 17, 187, 0.75);
+    background-color: rgba(234, 115, 141, 0.75);
   }
 
   75% {
     transform: scale(0.5);
-    background-color: rgba(0, 218, 69, 0.75);
+    background-color: #195190FF;
   }
 
   100% {
     transform: scale(1);
-    background-color: rgba(34, 17, 217, 0.75);
+    background-color: rgba(167, 167, 167, 0.75);
   }
 }
 
@@ -114,11 +114,16 @@
 
   0% {
     transform: scale(0.5);
-    background-color: rgba(34, 17, 217, 0.75);
+    background-color: rgba(0, 100, 145, 0.75);
   }
 
+  50% {
+    transform: scale(0.8);
+    background-color: rgba(50, 50, 50, 0.75);
+  }
+  
   100% {
     transform: scale(1);
-    background-color: rgba(230, 200, 0, 0.75);
+    background-color: #d8c039bf;
   }
 }
